--- a/index.html
+++ b/index.html
@@ -15,20 +15,15 @@
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
 
-</head>
-<body>
-  <div class="container team">
-    <h2 class="team-title">Meet our Team</h2>
-    <p class="team-intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aut odit, voluptate minima eius , perspiciatis a nobis porro fuga libero accusamus facilis vitae voluptatem tempora sunt! consequuntur nesciunt beatae provident.</p>
-</div>
-
-
-
-<!--Bootstrap JS-->
+    <div id="team-container" class="container my-5">
+      <h2 class="team-title text-center ">Meet our Team</h2>
+      <p class="team-intro text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aut odit, voluptate minima eius, perspiciatis a nobis porro fuga libero accusamus facilis vitae voluptatem tempora sunt! consequuntur nesciunt beatae provident.</p>
+      <div class="row" id="team-members">
+    <!--Bootstrap JS-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
      crossorigin="anonymous"></script>
- <!-- JavaScript -->
+    <!-- JavaScript -->
   <script defer src="js/script.js"></script>
 </body>
 </html>
